--- a/res/style.css
+++ b/res/style.css
@@ -55,23 +55,38 @@ div#products {
 	width: 50%;
 	margin: 0 auto;
 }
-.product-head {
-	font-size: 30px;
+
+div#about {
+	width: 70%;
+	margin: 0 auto;
 }
-.product-head hr {
+div#about .post{
+	text-align: left;
+}
+
+.posts {
+
+}
+.posts hr {
 	border-color: #602060;
 }
-.product-title {
+.post{
+
+}
+.post-head {
+	font-size: 30px;
+}
+.post-title {
 	font-size: 20px;
 	padding: 5px;
 	text-align: left;
 }
-.product-desc {
+.post-desc {
 	width: 100%;
 	padding: 5px;
 }
 
-.product-link a{
+.post-link a{
 	background-color: #330033;
 	border: 2px solid #330033;
 	color: white;
@@ -87,13 +102,13 @@ div#products {
 	-webkit-transition-duration: 0.2s; /* Safari */
     transition-duration: 0.2s;
 }
-.product-link a:hover{
+.post-link a:hover{
 	background-color: #5c0a5c;
 	border: 2px solid #b43cdd;
 }
-.product-link a:before{
+.post-link a:before{
 	content: "Visit Page";
 }
-.product-link a:hover:before{
+.post-link a:hover:before{
 	content: "Visit Page >>";
 }
