--- a/res/style.css
+++ b/res/style.css
@@ -1,27 +1,54 @@
+:root {
+	--color-primary: #7777dc;
+	--color-secondary: #7084b7;
+	--color-highlight: #a244a2;
+	--color-highlight-secondary: #492c45;
+	
+	--color-bg-primary: #c9cbd9;
+	--color-bg-secondary: #9dbae8;
+	--color-footer-primary: #575f9c;
+	--color-footer-secondary: #3864a0;
+	--color-footer-highlight: white;
+
+	--color-gradient-bg: var(--color-bg-primary); /* For browsers that do not support gradients */
+	--color-gradient-bg: -webkit-linear-gradient( var(--color-bg-primary)), var(--color-bg-secondary)) ); /* For Safari 5.1 to 6.0 */
+	--color-gradient-bg: -o-linear-gradient( var(--color-bg-primary), var(--color-bg-secondary) ); /* For Opera 11.1 to 12.0 */
+	--color-gradient-bg: -moz-linear-gradient( var(--color-bg-primary), var(--color-bg-secondary) ); /* For Firefox 3.6 to 15 */
+	--color-gradient-bg: linear-gradient(var(--color-bg-primary), var(--color-bg-secondary)); /* Standard syntax */
+
+	--color-gradient-footer: var(--color-footer-primary); /* For browsers that do not support gradients */
+	--color-gradient-footer: -webkit-linear-gradient( var(--color-footer-primary)), var(--color-footer-secondary)) ); /* For Safari 5.1 to 6.0 */
+	--color-gradient-footer: -o-linear-gradient( var(--color-footer-primary), var(--color-footer-secondary) ); /* For Opera 11.1 to 12.0 */
+	--color-gradient-footer: -moz-linear-gradient( var(--color-footer-primary), var(--color-footer-secondary) ); /* For Firefox 3.6 to 15 */
+	--color-gradient-footer: linear-gradient(var(--color-footer-primary), var(--color-footer-secondary)); /* Standard syntax */
+
+
+}
+
 body {
-	background: black; /* For browsers that do not support gradients */
-	background: -webkit-linear-gradient(black, #112b08); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(black, #112b08); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(black, #112b08); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(black, #112b08); /* Standard syntax */
+	
+	background: var(--color-gradient-bg, white); 
 
 	text-align: center;
 	color: white;
 }
 
 footer {
+	background: var(--color-gradient-footer, var(--color-footer-primary));
+	margin: 20px 0px 0px 0px;
+	padding: 20px;
 	text-align: center;
 	font-size: 12px;
 }
 hr {
-	background-color: #006600;
-	border-color: #006600;
-	color: #006600;
+	background-color: var(--color-highlight);
+	border-color: var(--color-highlight);
+	color: var(--color-highlight);
 }
 
 .button {
-	background-color: #112b08;
-	border: 2px solid #112b08;
+	background-color: var(--color-secondary);
+	border: 2px solid var(--color-secondary);
 	color: white;
 	padding: 5px 32px;
 	border-radius: 8px;
@@ -35,8 +62,8 @@ hr {
     transition-duration: 0.2s;
 }
 .button:hover {
-	background-color: #227722;
-	border: 2px solid #61d161;
+	background-color: var(--color-highlight);
+	border: 2px solid var(--color-highlight-secondary);
 }
 
 #navi {
