--- a/res/style.css
+++ b/res/style.css
@@ -177,8 +177,10 @@ div#about .post{
 	text-align: left;
 }
 .post-desc {
-	width: 100%;
+	width: 85%;
 	padding: 5px;
+	text-align: left;
+	margin: 0 auto;
 }
 
 .post-link a{
